# reddit-motion

./: .gitignore  CONFIGURATION.md  Cargo.toml  README.md  _README.md  concat_videos.txt  main.rs  redditconfig.rs  setting.rs  settings.rs
.devcontainer/: devcontainer.json
.github/: labeler.yml
.github/workflows/: rust.yml
assets/locales/de/: main.ftl
assets/locales/en/: main.ftl
assets/locales/en-US/: main.ftl
assets/locales/es/: main.ftl
assets/locales/fr/: main.ftl
assets/locales/hi/: main.ftl
assets/locales/it/: main.ftl
assets/locales/ja/: main.ftl
assets/locales/tr/: main.ftl
assets/locales/ua/: main.ftl
examples/: external_script.py  reddit_motion.py
experiments/: as_single_string.kt  concat.txt  ffmpegcomamnds.txt  hide_popups.js
experiments/range-checks/: Cargo.toml
experiments/range-checks/src/: main.rs
experiments/title_screenshot/: main.rs
experiments/ytdl-tests/: Cargo.toml
experiments/ytdl-tests/src/: main.rs
experiments/zooming/: Cargo.toml  main.rs
legacy/: core.rs  db.rs  ffmpeg.rs  localize.rs  main.rs  mod.rs  utils.rs
legacy/config/: args.rs  assets.rs  mod.rs  reddit.rs  subreddit.rs  tts.rs  video.rs
legacy/config/story_mode/: comments.rs  general.rs  media.rs  mod.rs
reddit-motion-py/: setup.py
reddit-motion-py/src/reddit-motion/: __init__.py
reddit-motion-py/src/reddit_motion.egg-info/: PKG-INFO
social_media-py/: setup.py
social_media-py/src/: create_videos_for_social_media.py  upload.py  youtube_uploader.py
src/: assets.rs  callback.rs  command.rs  config.rs  db.rs  errors.rs  ffmpeg.rs  localize.rs  localizer.rs  main.rs  settings.rs  setup.rs  utils.rs
src/config/: args.rs  assets.rs  callback.rs  dimensions.rs  duration.rs  error.rs  mod.rs  reddit.rs  screenshot.rs  story_mode.rs  subreddit.rs  translate.rs  tts.rs  video.rs
src/config/reddit/: login.rs  mod.rs  subreddit.rs  theme.rs  utils.rs
src/config/story_mode/: general.rs  mod.rs  post.rs
src/config/tts/: mod.rs  utils.rs
src/reddit_motion.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/setup/: background_vids.rs  mod.rs
src/video_generator/: comments.rs  mod.rs  post.rs  title.rs  utils.rs
src/video_generator/data/: comments.rs  mod.rs  post.rs  title.rs  utils.rs
trash/: Cargo.toml  assets.rs  errors.rs  main.rs  setup.rs
