[package]
name = "reddit-motion"
version = "0.1.0"
edition = "2021"

[dependencies]
# Base dependencies
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }

# Error handling
thiserror = "1.0.47"
anyhow = "1.0.77"
colored = "2.1.0"

# Data serialization
serde = { version = "1.0.145" , features = ["derive"] }
toml = "0.7.6"

# Error enums
strum = { version = "0.25.0" , features = ["derive"]}

# Video download
rusty_ytdl = "0.6.6"

# File download progress
indicatif = "0.17.6"

# Text preprocessing
regex = "1.10.2"
lazy_static = "1.4.0"

# Text-to-Speech
gtts = "0.1.0"

# Browser interaction
chromiumoxide = { version = "0.5.7" , features = ["tokio-runtime"]}
futures = "0.3.30"

# Reddit API
roux = "2.2.9"

# Random selection
rand = "0.8.5"

# Version check
crates_io_api = "0.9.0"
chrono = "0.4.31"
version-compare = "0.1.1"

# Recursive async functions
async-recursion = "1.0.5"

# UI Localization
fluent-templates = "0.8.0"
unic-langid = "0.9.4"

# Custom Serialization 
serde_with = "3.4.0"

# FFmpeg download
[target.'cfg(target_os = "windows")'.dependencies]
reqwest = "0.11.23"

# For extracting zip file
zip-extract = "0.1.2"
