[package]
name = "reddit-motion"
version = "0.1.0"
edition = "2021"
readme = "README.md"
authors = ["Aarav Shah <aaravaditya51@gmail.com>"]
description = "Transform Reddit Posts and Custom Text into Engaging Videos with Localization. Customize Content, Boost Speed, Share on Social Media – Experience its Excellence!"
documentation = "https://docs.rs/reddit-motion"
repository = "https://github.com/Deaths-Door/reddit-motion"
homepage = "https://github.com/Deaths-Door/reddit-motion"
license = "MIT OR Apache-2.0"

[dependencies]
# Base dependency for async/await
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }

# For providing option to edit config.toml
clap = { version = "4.4.12" , features = ["derive"] }

# Edit config.toml
open = "5.0.1"

# Error handling
anyhow = "1.0.77"
thiserror = "1.0.47"

# Data serialization
serde = { version = "1.0.145" , features = ["derive"] }
toml = "0.7.6"

# Custom Serialization 
serde_with = "3.4.0"

# Enum Utils
strum = { version = "0.26.2" , features = ["derive"] }

# UI Localization
fluent-templates = "0.9.4"
unic-langid = "0.9.4"

# For Terminal UI
colored = "2.1.0"

# For Lazyness
maplit = "1.0.2"
lazy_static = "1.4.0"

# Version check
crates_io_api = "0.11.0"
chrono = "0.4.31"
version-compare = "0.2.0"

# For handling assets
glob = "0.3.1"

# Ensuring only valid files are passed on to the program
mime_guess = "2.0.4"
mime = "0.3.17"

# Video download
rusty_ytdl = "0.7.1"

# File download progress
indicatif = "0.17.6"

# Browser interaction
chromiumoxide = { version = "0.5.7" , features = ["tokio-runtime"] }
futures = "0.3.30"

# Reddit API
roux = "2.2.9"

# For detecting language of current post
whatlang = "0.16.4"

# Text preprocessing
regex = "1.10.2"

# Text-to-Speech
gtts = "0.1.0"
elevenlabs_rs = "0.2.0"

# Random selection
rand = "0.8.5"

# For translation 
deepl = "0.4.5"

# FFmpeg download
[target.'cfg(target_os = "windows")'.dependencies]
reqwest = "0.12.4"

# For extracting zip file
zip-extract = "0.1.2"
