[package]
name = "reddit-motion"
version = "0.1.0"
edition = "2021"

[dependencies]
# For threading + async main
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }


# For browser interaction
chromiumoxide = { version = "0.5.7" , features = ["tokio-runtime"]}
futures = "0.3.30"
